syntax = "proto3";

package proto;

option go_package = "./;proto"; // Same output dir as mmo.proto

// Enums

enum OnlineStatus {
    STATUS_UNKNOWN = 0;
    STATUS_OFFLINE = 1;
    STATUS_ONLINE = 2;
    STATUS_AWAY = 3;
}

// --- Service Definition ---

service MetadataService {
  // Get display name for a given player ID
  rpc GetPlayerName (GetPlayerNameRequest) returns (GetPlayerNameResponse);
  // Set/Update display name for a player ID (e.g., on creation or change)
  rpc SetPlayerName (SetPlayerNameRequest) returns (SetPlayerNameResponse);

  rpc SetPlayerStatus (SetPlayerStatusRequest) returns (SetPlayerStatusResponse);
  rpc GetPlayerStatus (GetPlayerStatusRequest) returns (GetPlayerStatusResponse);
}

// --- Message Definitions ---

message GetPlayerNameRequest {
  string player_id = 1;
}

message GetPlayerNameResponse {
  string player_id = 1;
  string display_name = 2; // The name found (or default if not set)
  bool found = 3;          // Indicate if a specific name was found for this ID
}

message SetPlayerNameRequest {
  string player_id = 1;
  string display_name = 2;
}

message SetPlayerNameResponse {
  bool success = 1; // Indicate if setting was successful
}

message SetPlayerStatusRequest {
    string player_id = 1;
    OnlineStatus status = 2;
}

message SetPlayerStatusResponse {
    bool success = 1;
}

message PlayerStatusInfo {
    string player_id = 1;
    OnlineStatus status = 2;
    int64 last_seen_timestamp_ms = 3;
}

message GetPlayerStatusRequest {
    repeated string player_ids = 1;
}

message GetPlayerStatusResponse {
    map<string, PlayerStatusInfo> statuses = 1;
}